# scattnlay-bragg-onion

./: .gitignore  README.md  pyproject.toml  test.py
examples/: analyse_bragg_onions.py
src/bragg_onion/: colour_adapter.py  fields.py  integration.py  scattering_analysis.py  spectrum_colour_props.py  sweep.py
src/bragg_onion/_notebook_tools/: __init__.py  case_selection.py  colour.py  io.py  rosch_plots.py  scattering_extract.py  scattering_plots.py  scattering_sectors.py  strip_plots.py
trash/: RoschMacAdam_analysis.py  RoschMacAdam_cache.py  Spectrum_ColorProps.py  qnm.py
