[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bragg-onion"
version = "0.1.0"
description = "Scattnlay-based simulation tools for multilayer Bragg onion spheres"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"

authors = [
  { name = "Niklas Schwarz", email = "niklas.r.schwarz@gmail.com" }
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "plotly>=5.20",
  "colour-science>=0.4"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization"
]

[project.optional-dependencies]
scattnlay = [
  "python-scattnlay>=2.4"
]
full = [
  "python-scattnlay>=2.4"
]

[project.urls]
Homepage = "https://github.com/Photonsneverrest/mie_bragg_onion"
Repository = "https://github.com/Photonsneverrest/mie_bragg_onion"
Issues = "https://github.com/Photonsneverrest/mie_bragg_onion/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bragg_onion = [
  "rosch_macadam_colour_solid_1nm.csv",
  "rosch_macadam_max_chroma_per_hue_1deg.csv"
]